tests222/tests2/test253.out
lli: <stdin>:1:1: error: expected top-level entity
line 39: variable ZLTc is not defined
^
